--- a/css/basic.css
+++ b/css/basic.css
@@ -13,7 +13,7 @@ body {
 
 #wrapper {
   width: 100%;
-  background: #202020;
+  background:darkgreen;
 }
 
 #page-wrapper {
@@ -55,7 +55,7 @@ body {
 
 .navbar-cls-top .navbar-brand {
   color: #fff;
-  background: #202020;
+  background: darkgreen;
   width: 260px;
   text-align: center;
   height: 75px;
@@ -81,7 +81,7 @@ body {
 .user-img-div {
   min-height: 20px;
   padding: 12px;
-  background-color: #232323;
+background: darkgreen;;
 }
 
 .user-img-div img {
@@ -97,10 +97,10 @@ body {
 }
 
 .active-menu {
-  background-color: #6719bd !important;
+  background-color:green !important;
 }
 .active-menu-top {
-  background-color: #000 !important;
+  background-color: green !important;
 }
 
 .arrow {
@@ -135,11 +135,13 @@ body {
 
 .sidebar-collapse .nav {
   padding: 0;
+  background: darkgreen;
 }
 
 .sidebar-collapse .nav > li > a {
   color: #fff;
-  background: #202020;
+  /* background: #202020; */
+  background: darkgreen;
   text-shadow: none;
   padding: 15px 40px;
   border-bottom: 1px solid #2f2e31;
@@ -151,7 +153,7 @@ body {
 
 .sidebar-collapse .nav > li > a:hover,
 .sidebar-collapse .nav > li > a:focus {
-  background: #0a0a0a;
+  background: green;
   outline: 0;
 }
 
@@ -171,16 +173,16 @@ body {
 }
 
 .navbar-cls-top {
-  background: #6719bd;
+  background: darkred;
   border-bottom: none;
 }
 
 .navbar-default {
-  border: 0px solid black;
+  border: 0px solid green;
 }
 
 .navbar-header {
-  background: #000000;
+  background: darkgreen;
 }
 
 .navbar-default .navbar-toggle:hover,
